--- a/src/main/resources/templates/homeExposant.html
+++ b/src/main/resources/templates/homeExposant.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
 		<!--/.evenement -->
 		<h1 class="entete">Bonjour Exposant</h1>
 		<div class="pcard" id="evenement"></div>
-		<div class="container" >
+		<div th:if="!${eventError.errorON}" class="container" th:each="eventInfos : ${event}" >
 			<div class="col-sm-12">  
 				<div class="card">
 					<div class="card-header">
