--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -24,11 +24,11 @@
 			<div class="col-sm-12">  
 				<div class="card">
 					<div class="card-header">
-						<h2>Evènement</h2>
+						<h2 th:text="${eventInfos.name}">Evènement</h2>
 					</div>
 					<div class="card-body">
-						<h3 class="card-title">Festival 2020</h3>
-						<p class="card-text">Le festival Orléans Joue ouvrira ses portes les 29 et 30 Aout 2020.</p>
+						<h4 class="card-title" th:text="|${eventInfos.name} ouvre ses portes du ${#dates.format(eventInfos.eventBeginningDate, 'dd/MM/yyyy')} au ${#dates.format(eventInfos.eventEndingDate, 'dd/MM/yyyy')}|"></h4>
+						<p class="card-text" th:text="${eventInfos.description}"></p>
 						<a href="#" class="btn btn-primary">S'inscrire</a>
 					</div>
 				</div>
