--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -20,7 +20,7 @@
 		<!--/.evenement -->
 		<h1 class="entete">Bonjour Exposant</h1>
 		<div class="pcard" id="evenement"></div>
-		<div th:if="!${eventError.errorON}" class="container" th:each="eventInfos : ${event}" >
+		<div th:if="!${eventError.errorON}" class="container containerStyle" th:each="eventInfos : ${event}" >
 			<div class="col-sm-12">  
 				<div class="card">
 					<div class="card-header">
@@ -38,7 +38,7 @@
 
 		<!--/.Mon inscription -->
 		<div class="pcard" id="inscription"></div>
-		<div class="container">
+		<div class="container containerStyle">
 			<div class="col-sm-12">  
 				<div class="card">
 					<div class="card-header">
@@ -59,7 +59,7 @@
 
 		<!--/.Mes informations -->
 		<div class="pcard" id="information"></div>
-		<div class="container">
+		<div class="container containerStyle">
 			<div class="col-sm-12">  
 				<div class="card">
 					<div class="card-header">
