--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -2,7 +2,7 @@
   <!-- Fixed navbar -->
   <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
     <a class="nav-link p-0" href="index.html">
-      <img src="../pictures/logo_transparent2.png" class="rounded-circle z-depth-0" alt="avatar image" height="70">
+      <img src="../pictures/logo_transparent2.png" class="rounded-circle z-depth-0" alt="Logo Orléans Joue" height="70">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
       aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,8 +24,8 @@
       <ul class="navbar-nav ml-auto nav-flex-icons">
         <li class="nav-item avatar">
           <div class="nav-link p-0">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0"
-              alt="avatar image" height="35">
+            <img th:src="@{${connectedUser.getProfilePicture()}}" class="rounded-circle z-depth-0"
+              alt="Image de profil" height="35">
           </div>
         </li>
         <li class="nav-item dropdown">
