--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -49,7 +49,8 @@ h1, h2, h3, h4, h5 {
 .btn:hover {
 	background: #ec5d31;
 	box-shadow: 0 0px 5px rgba(0, 0, 0, 0.9);
-	margin-right: 2px;
+	margin-right:5px;
+	animation: toRight 0.5s;
 }
 
 .containerStyle {
@@ -83,4 +84,16 @@ h1, h2, h3, h4, h5 {
 	transform: rotate(2deg);
 	right: 10px;
 	left: auto;
+}
+
+
+@keyframes toRight {
+	
+	from {
+		margin-right:0;
+	}
+	
+	to{
+		margin-right:5px;
+	}	
 }
