--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,24 +1,24 @@
 <footer class="footerBackground" th:fragment="bottom">
 	<div class="mt-5 pt-5 pb-5 footer">
-		<div class="container1">
+		<div class="container footerContainer">
 			<div class="row">
-				<div class="col-lg-5 col-xs-12 about-company">
-					<h3>Orléans Joue</h3>
+				<div class="col-lg-3 col-xs-12 mx-auto about-company">
+					<h4>Orléans Joue</h4>
 					<p class="pr-5 text-white-50">Association loi 1901</p>
 					<p class="pr-5 text-white-50"><a class="mailto" href="https://orleans-joue.fr" target="_blank">Site
 							officiel Orléans Joue</a></p>
 				</div>
-				<div class="col-lg-3 col-xs-12 links">
+				<div class="col-lg-3 col-xs-12 mx-auto links">
 					<h4 class="mt-lg-0 mt-sm-3">liens</h4>
 					<ul class="m-0 p-0">
 						<li>- <a href="#">Lorem ipsum</a></li>
 						<li>- <a href="#">Nam mauris velit</a></li>
 					</ul>
 				</div>
-				<div class="col-lg-4 col-xs-12 location">
-					<h5 class="mt-lg-0 mt-sm-4">Adresse</h5>
+				<div class="col-lg-3 col-xs-12 mx-auto location">
+					<h4 class="mt-lg-0 mt-sm-4">Adresse</h4>
 					<p>45000 Orléans</p>
-					<p class="mb-0"><i class="fa fa-phone mr-3"></i>+33 6.00.00.00.00</p>
+					<a href="tel:+33600000000" class="mb-0 tel"><i class="fa fa-phone mr-3"></i>+33600000000</a>
 					<p><i class="fa fa-envelope-o mr-3"></i><a class="mailto"
 							href="mailto:contact@orleans-joue.fr">contact@orleans-joue.fr</a></p>
 				</div>
