ajout des animations js

--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -15,6 +15,9 @@ h1, h2, h3, h4, h5 {
 	padding-left: 3rem;
 }
 
+hr{
+	color:#5e3388
+}
 /*Card*/
 .pcard {
 	height: 80px;
@@ -85,7 +88,6 @@ h1, h2, h3, h4, h5 {
 	right: 10px;
 	left: auto;
 }
-
 
 @keyframes toRight {
 	
