--- a/src/main/resources/static/CSS/navBar.css
+++ b/src/main/resources/static/CSS/navBar.css
@@ -20,6 +20,19 @@
 	font-weight: bold;
 }
 
+nav li a {
+	transition: all .2s;
+    transition-property: all;
+    transition-duration: 0.2s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+
+.selected{
+	font-weight:bold;
+	box-shadow:0 2px 0 #fff;
+}
+
 @keyframes growUp {
 	from {
 		font-size:18px;
