--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -9,7 +9,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-      <ul class="navbar-nav col-6 ">
+      <ul class="navbar-nav col-6 cd-main-nav">
 
         <li class="nav-item mx-auto">
           <a class="nav-link nav1" href="#evenement">Evenement</a>
