--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,6 +1,6 @@
 <footer class="footerBackground" th:fragment="bottom">
 	<div class="mt-5 pt-5 pb-5 footer">
-		<div class="container footerContainer">
+		<div class="container footerContainer text-center text-lg-left">
 			<div class="row">
 				<div class="col-lg-3 col-xs-12 mx-auto about-company">
 					<h4>Orléans Joue</h4>
@@ -10,7 +10,7 @@
 				</div>
 				<div class="col-lg-3 col-xs-12 mx-auto links">
 					<h4 class="mt-lg-0 mt-sm-3">liens</h4>
-					<ul class="m-0 p-0">
+					<ul class="m-0 p-0 mb-3">
 						<li>- <a href="#">Lorem ipsum</a></li>
 						<li>- <a href="#">Nam mauris velit</a></li>
 					</ul>
