--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -19,7 +19,7 @@
 	<main>
 		<!--/.evenement -->
 		
-		<h1 class="entete">Bonjour Exposant</h1>
+		<h1 class="entete" th:text="|Bonjour ${connectedUser.firstname} ${connectedUser.lastname}|"></h1>
 		<hr class="col-11"/>
 		<section class="fluid-container" id="evenement">
 			<div class="pcard" ></div>
