insertion du plugin sass compiler

--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="../CSS/style.css">
 		<link rel="stylesheet" href="../CSS/footer.css">
 		<link rel="stylesheet" href="../CSS/navBar.css">
+		<link rel="stylesheet" href="../CSS/teststyle	.css">
     <title>accueil exposant</title>
 </head>
 <body>
@@ -94,7 +95,6 @@
 			</div>
 		</section>
 		<!--/.Mes informations -->
-
 	</main>
 
 	<footer th:replace="footer :: bottom"></footer>
