h2 and footer padding correction

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -1,15 +1,15 @@
 <footer class="footerBackground" th:fragment="bottom">
 	<div class="mt-5 pt-5 pb-5 footer">
 		<div class="container footerContainer text-center text-lg-left">
-			<div class="row">
-				<div class="col-lg-3 col-xs-12 mx-auto about-company">
+			<div class="row pt-2 pt-sm-3">
+				<div class="col-lg-3 col-xs-12 mx-auto about-company ">
 					<h4>Orléans Joue</h4>
-					<p class="pr-5 text-white-50">Association loi 1901</p>
-					<p class="pr-5 text-white-50"><a class="mailto" href="https://orleans-joue.fr" target="_blank">Site
+					<p class="text-white-50">Association loi 1901</p>
+					<p class="text-white-50"><a class="mailto" href="https://orleans-joue.fr" target="_blank">Site
 							officiel Orléans Joue</a></p>
 				</div>
 				<div class="col-lg-3 col-xs-12 mx-auto links">
-					<h4 class="mt-lg-0 mt-sm-3">liens</h4>
+					<h4 class="mt-lg-0 mt-sm-3">Liens</h4>
 					<ul class="m-0 p-0 mb-3">
 						<li>- <a href="#">Lorem ipsum</a></li>
 						<li>- <a href="#">Nam mauris velit</a></li>
