--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +9,33 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme|Roboto&display=swap" rel="stylesheet"> 
-		<link rel="stylesheet" href="../CSS/style.css">
-		<link rel="stylesheet" href="../CSS/footer.css">
-		<link rel="stylesheet" href="../CSS/navBar.css">
+	<link rel="stylesheet" href="../CSS/style.css">
+	<link rel="stylesheet" href="../CSS/footer.css">
+	<link rel="stylesheet" href="../CSS/navBar.css">
     <title>accueil exposant</title>
 </head>
-<body>
-	<header th:replace="navBar.html :: top"></header>
 
-	<main>
-		<!--/.evenement -->
-		
-		<h1 class="entete" th:text="|Bonjour ${connectedUser.firstname} ${connectedUser.lastname}|"></h1>
-		<hr class="col-11"/>
-		<section class="fluid-container" id="evenement">
-			<div class="pcard" ></div>
-			<div class="container containerTitleStyle">
-				<h2 class="col-12 title">Evenements:</h2>
-			</div>
-			<div th:if="!${eventError.errorON}" class="container containerStyle" th:each="eventInfos : ${event}" >
-				<div class="col-sm-12">  
-					<div class="card">
-						<div class="card-header">
-							<h2 th:text="${eventInfos.name}">Evènement</h2>
-						</div>
-						<div class="card-body">
-							<h4 class="card-title" th:text="|${eventInfos.name} ouvre ses portes du ${#dates.format(eventInfos.eventBeginningDate, 'dd/MM/yyyy')} au ${#dates.format(eventInfos.eventEndingDate, 'dd/MM/yyyy')}|"></h4>
+<body>
+    <header th:replace="navBar.html :: top"></header>
+
+    <main>
+        <!--/.evenement -->
+
+        <h1 class="entete" th:text="|Bonjour ${connectedUser.firstname} ${connectedUser.lastname}|"></h1>
+        <hr class="col-11" />
+        <section class="fluid-container" id="evenement">
+            <div class="pcard"></div>
+            <div class="container containerTitleStyle">
+                <h2 class="col-12 title">Evenements:</h2>
+            </div>
+            <div th:if="!${eventError.errorON}" class="container containerStyle" th:each="eventInfos : ${event}">
+                <div class="col-sm-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <h2 th:text="${eventInfos.name}">Evènement</h2>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title" th:text="|${eventInfos.name} ouvre ses portes du ${#dates.format(eventInfos.eventBeginningDate, 'dd/MM/yyyy')} au ${#dates.format(eventInfos.eventEndingDate, 'dd/MM/yyyy')}|"></h4>
 							<p class="card-text" th:text="${eventInfos.description}"></p>
 							<a href="#" class="btn btn-primary">S'inscrire</a>
 						</div>
@@ -75,7 +77,7 @@
 		<section class="fluid-container" id="information">
 			<div class="pcard" ></div>
 			<div class="container containerTitleStyle">
-				<h2 class="col-12 title">Mes informations:</h2>
+				<h2 class="col-sm-12 title">Mes informations:</h2>
 			</div>
 			<div class="container containerStyle">
 				<div class="col-sm-12">  
