--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -9,15 +9,15 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-      <ul class="navbar-nav col-6 cd-main-nav">
+      <ul class="navbar-nav col-12 col-lg-6 cd-main-nav">
 
-        <li class="nav-item mx-auto">
+        <li class="nav-item mx-xs-0 mx-lg-auto">
           <a class="nav-link nav1" href="#evenement">Evenement</a>
         </li>
-        <li class="nav-item mx-auto">
+        <li class="nav-item mx-xs-0 mx-lg-auto">
           <a class="nav-link nav1" href="#inscription">Mon Inscription</a>
         </li>
-        <li class="nav-item mx-auto">
+        <li class="nav-item mx-xs-0 mx-lg-auto">
           <a class="nav-link nav1" href="#information">Mes Informations</a>
         </li>
       </ul>
