--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -11,24 +11,30 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
       <ul class="navbar-nav col-12 col-lg-6 cd-main-nav">
 
-        <li class="nav-item mx-xs-0 mx-lg-auto">
+        <li class="nav-item mx-auto">
           <a class="nav-link nav1" href="#evenement">Evenement</a>
         </li>
-        <li class="nav-item mx-xs-0 mx-lg-auto">
+        <li class="nav-item mx-auto">
           <a class="nav-link nav1" href="#inscription">Mon Inscription</a>
         </li>
-        <li class="nav-item mx-xs-0 mx-lg-auto">
+        <li class="nav-item mx-auto">
           <a class="nav-link nav1" href="#information">Mes Informations</a>
+        </li>
+        <li class="nav-item mx-auto d-block d-lg-none mt-3">
+          <a class="nav-link nav1" href="#">Mon profil</a>
+        </li>
+        <li class="nav-item mx-auto d-block d-lg-none mb-3">
+          <a class="nav-link nav1" href="#">Deconnection</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
-        <li class="nav-item avatar">
+        <li class="nav-item avatar d-none d-lg-block">
           <div class="nav-link p-0">
             <img th:src="@{${connectedUser.getProfilePicture()}}" class="rounded-circle z-depth-0"
               alt="Image de profil" height="35">
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown d-none d-lg-block">
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
           </a>
