ajout d'un dropdown divider

--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -20,6 +20,7 @@
         <li class="nav-item mx-auto">
           <a class="nav-link nav1" href="#information">Mes Informations</a>
         </li>
+        <div class="dropdown-divider mt-3 mb-0"></div>
         <li class="nav-item mx-auto d-block d-lg-none mt-3">
           <a class="nav-link nav1" href="#">Mon profil</a>
         </li>
