--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -37,7 +37,8 @@
                         <div class="card-body">
                             <h4 class="card-title" th:text="|${eventInfos.name} ouvre ses portes du ${#dates.format(eventInfos.eventBeginningDate, 'dd/MM/yyyy')} au ${#dates.format(eventInfos.eventEndingDate, 'dd/MM/yyyy')}|"></h4>
 							<p class="card-text" th:text="${eventInfos.description}"></p>
-							<a href="#" class="btn btn-primary">S'inscrire</a>
+								<p class="regMessage" th:unless="${eventInfos.registrationOpen}" th:text="${eventInfos.registrationMessage}"></p>
+								<a th:if="${eventInfos.registrationOpen}" href="#" class="btn btn-primary">S'inscrire</a>
 						</div>
 					</div>
 				</div>
