--- a/src/main/resources/static/CSS/navBar.css
+++ b/src/main/resources/static/CSS/navBar.css
@@ -9,7 +9,7 @@
     padding-right: 10px;
 }
 
-.nav1:hover {
+.navElement:hover {
     background: white;
     border-radius: 5px;
     color: #ec5d31 !important;
