--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -12,20 +12,20 @@
       <ul class="navbar-nav col-12 col-lg-6 cd-main-nav">
 
         <li class="nav-item mx-auto">
-          <a class="nav-link nav1" href="#evenement">Evenement</a>
+          <a class="nav-link navElement" href="#evenement">Evenement</a>
         </li>
         <li class="nav-item mx-auto">
-          <a class="nav-link nav1" href="#inscription">Mon Inscription</a>
+          <a class="nav-link navElement" href="#inscription">Mon Inscription</a>
         </li>
         <li class="nav-item mx-auto">
-          <a class="nav-link nav1" href="#information">Mes Informations</a>
+          <a class="nav-link navElement" href="#information">Mes Informations</a>
         </li>
         <div class="dropdown-divider mt-3 mb-0"></div>
         <li class="nav-item mx-auto d-block d-lg-none mt-3">
-          <a class="nav-link nav1" href="#">Mon profil</a>
+          <a class="nav-link navElement" href="#">Mon profil</a>
         </li>
         <li class="nav-item mx-auto d-block d-lg-none mb-3">
-          <a class="nav-link nav1" href="#">Deconnection</a>
+          <a class="nav-link navElement" href="#">Deconnection</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto nav-flex-icons">
