--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col copyright">
-					<p class="pied"><small class="text-white-50">Copyright © 2019 Orléans Joue. Tous droits
+					<p class="copyright"><small class="text-white-50">Copyright © 2019 Orléans Joue. Tous droits
 							réservés.</small></p>
 				</div>
 			</div>
