--- a/src/main/resources/templates/homeVolunteers.html
+++ b/src/main/resources/templates/homeVolunteers.html
@@ -20,7 +20,7 @@
 
     <main>
         <!--/.evenement -->
-        <h1 class="entete">Bonjour Volontaire</h1>
+        <h1 class="helloUser">Bonjour Volontaire</h1>
         <div class="pcard" id="evenement"></div>
         <div th:if="!${eventError.errorON}" class="container" th:each="eventInfos : ${event}">
             <div class="col-sm-12">
