--- a/src/main/resources/static/CSS/subscribeEditor.css
+++ b/src/main/resources/static/CSS/subscribeEditor.css
@@ -3,7 +3,7 @@
     margin: auto;
     padding: 0px;
 }
-li{
+.subscribeEditor li{
     text-align: center !important;
     font-size: 1rem !important;
 }
@@ -121,7 +121,6 @@ li{
     color: black;
     text-transform: uppercase;
     font-size: 9px;
-    width: 25%;
     float: left;
     position: relative;
     letter-spacing: 1px;
@@ -187,6 +186,6 @@ li{
     text-decoration: none;
 }
 
-label{
+subscribeEditor label{
     font-size: 14px;
 }
