--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -87,6 +87,7 @@
                             <div>
                             	<p>Coût de l'inscrption : 65 euros</p>
                             </div>
+                            <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
                             <button type="submit" name="registration" class="next action-button">Valider votre demande d'inscription</button>
                         </fieldset>
                     </form>
