--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -25,7 +25,7 @@
             <h1 class="col-12 pl-7">Formulaire d'inscription</h1>
             <div class="row">
                 <div class="col-12 ">
-                    <form id="msform" method="post" action="/inscription_editeur">
+                    <div id="msform">
                         <!-- progressbar -->
                         <ul class="row progressbar" id="progressbar">
                             <li class="active col-4">Informations générales</li>
@@ -33,64 +33,71 @@
                             <li class="col-4">Informations complémentaires</li>
                         </ul>
                         <!-- fieldsets -->
-                        <fieldset>
-                            <h2 class="fs-title">Informations générales</h2>
-                            <h3 class="fs-subtitle">Inscription de l'entreprise:</h3>
-                            <div class="row align-items-center text-left pt-5">
-                                <div class="col-sm-8">
-                                    <label for="nbtable">Nombre de tables souhaitées</label>
+                        <form method="post" action="/inscription_editeur">
+                            <fieldset>
+                                <h2 class="fs-title">Informations générales</h2>
+                                <h3 class="fs-subtitle">Inscription de l'entreprise:</h3>
+                                <div class="row align-items-center text-left pt-5">
+                                    <div class="col-sm-8">
+                                        <label for="nbtable">Nombre de tables souhaitées</label>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <input type="number" id="nbtable" name="tableNb" value="1" min="0" max="20">
+                                    </div>
                                 </div>
-                                <div class="col-sm-2">
-                                    <input type="number" id="nbtable" name="tableNb" value="1" min="0" max="20">
+                                <div class="row align-items-center text-left pt-4">
+                                    <div class="col-md-8">
+                                        <label for="elec">Besoin d'éléctricité</label>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <input type="checkbox" id="elec" name="electricity" data-toggle="toggle" data-on="OUI" data-off="NON">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row align-items-center text-left pt-4">
-                                <div class="col-md-8">
-                                    <label for="elec">Besoin d'éléctricité</label>
+                                <div class="row align-items-center text-left pt-4">
+                                    <div class="col-md-8">
+                                        <label for="send">Option vente sur le stand</label>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <input type="checkbox" id="send" name="saleOption" data-toggle="toggle" data-on="OUI" data-off="NON">
+                                    </div>
                                 </div>
-                                <div class="col-md-2">
-                                    <input type="checkbox" id="elec" name="electricity" data-toggle="toggle" data-on="OUI" data-off="NON">
+                                <input type="button" name="next" class="next action-button" value="Suivant" />
+                            </fieldset>
+                        </form>
+                        <form method="post" action="/inscription_editeur">
+                            <fieldset>
+                                <h2 class="fs-title">Moyens Humains</h2>
+                                <h3 class="fs-subtitle">Your presence on the social network</h3>
+                                <div></div>
+                                <div class="row align-items-center text-left pt-4">
+                                    <div class="col-md-8">
+                                        <p>Ajouter un référent</p>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <input type="checkbox" id="volunteer" name="volunteerNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row align-items-center text-left pt-4">
-                                <div class="col-md-8">
-                                    <label for="send">Option vente sur le stand</label>
+                                <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
+                                <input type="button" name="next" class="next action-button" value="Suivant" />
+                            </fieldset>
+                        </form>
+                                
+                        <form method="post" action="/inscription_editeur">
+                            <fieldset>
+                                <h2 class="fs-title">Informations complémentaires</h2>
+                                <h3 class="fs-subtitle">Fill in your credentials</h3>
+                                <div>
+                                    <label for="comments">Ajouter un commentaire</label>
+                                    <textarea id="comments" class="comments" name="comments"></textarea>
                                 </div>
-                                <div class="col-md-2">
-                                    <input type="checkbox" id="send" name="saleOption" data-toggle="toggle" data-on="OUI" data-off="NON">
+                                <div>
+                                    <p>Coût de l'inscrption : 65 euros</p>
                                 </div>
-                            </div>
-                            <input type="button" name="next" class="next action-button" value="Suivant" />
-                        </fieldset>
-                        <fieldset>
-                            <h2 class="fs-title">Moyens Humains</h2>
-                            <h3 class="fs-subtitle">Your presence on the social network</h3>
-							<div></div>
-                            <div class="row align-items-center text-left pt-4">
-                                <div class="col-md-8">
-                                    <p>Ajouter un référent</p>
-                                </div>
-                                <div class="col-md-2">
-                                    <input type="checkbox" id="volunteer" name="volunteerNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                </div>
-                            </div>
-                            <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
-                            <input type="button" name="next" class="next action-button" value="Suivant" />
-                        </fieldset>
-                        <fieldset>
-                            <h2 class="fs-title">Informations complémentaires</h2>
-                            <h3 class="fs-subtitle">Fill in your credentials</h3>
-                            <div>
-                            	<label for="comments">Ajouter un commentaire</label>
-                            	<textarea id="comments" class="comments" name="comments"></textarea>
-                            </div>
-                            <div>
-                            	<p>Coût de l'inscrption : 65 euros</p>
-                            </div>
-                            <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
-                            <button type="submit" name="registration" class="next action-button">Valider votre demande d'inscription</button>
-                        </fieldset>
-                    </form>
+                                <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
+                                <button type="submit" name="registration" class="next action-button">Valider votre demande d'inscription</button>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
