--- a/src/main/resources/static/CSS/subscribeEditor.css
+++ b/src/main/resources/static/CSS/subscribeEditor.css
@@ -14,7 +14,7 @@
     margin-top: 30px;
 }
 
-#msform fieldset {
+#msform form {
     background: white;
     border: 1px solid #5e3388;
     border-radius: 5px ;
@@ -29,7 +29,7 @@
 }
 
 /*Hide all except first fieldset*/
-#msform fieldset:not(:first-of-type) {
+#msform form:not(:first-of-type) {
     display: none;
 }
 
