progress bar responsive

--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -27,10 +27,15 @@
                 <div class="col-12 ">
                     <div id="msform">
                         <!-- progressbar -->
-                        <ul class="row progressbar" id="progressbar">
+                        <ul class="row progressbar d-none d-sm-block" id="progressbar">
                             <li class="active col-4">Informations générales</li>
                             <li class="col-4">Moyens Humains</li>
                             <li class="col-4">Informations complémentaires</li>
+                        </ul>
+                        <ul class="row progressbar d-sm-none" id="progressbar">
+                            <li class="active col-4"></li>
+                            <li class="col-4"></li>
+                            <li class="col-4"></li>
                         </ul>
                         <!-- fieldsets -->
                         <form method="post" action="/inscription_editeur">
