--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -27,12 +27,12 @@
                 <div class="col-12 ">
                     <div id="msform">
                         <!-- progressbar -->
-                        <ul class="row progressbar d-none d-sm-block" id="progressbar">
+                        <ul class="row progressbar d-none d-sm-block" id="progressbar_1">
                             <li class="active col-4">Informations générales</li>
                             <li class="col-4">Moyens Humains</li>
                             <li class="col-4">Informations complémentaires</li>
                         </ul>
-                        <ul class="row progressbar d-sm-none" id="progressbar">
+                        <ul class="row progressbar d-sm-none" id="progressbar_2">
                             <li class="active col-4"></li>
                             <li class="col-4"></li>
                             <li class="col-4"></li>
