--- a/src/main/resources/static/CSS/subscribeEditor.css
+++ b/src/main/resources/static/CSS/subscribeEditor.css
@@ -109,14 +109,14 @@
 }
 
 /*progressbar*/
-#progressbar {
+.progressbar {
     margin-bottom: 30px;
     overflow: hidden;
     /*CSS counters to number the steps*/
     counter-reset: step;
 }
 
-#progressbar li {
+.progressbar li {
     list-style-type: none;
     color: black;
     text-transform: uppercase;
@@ -126,7 +126,7 @@
     letter-spacing: 1px;
 }
 
-#progressbar li:before {
+.progressbar li:before {
     content: counter(step);
     counter-increment: step;
     width: 24px;
@@ -141,7 +141,7 @@
 }
 
 /*progressbar connectors*/
-#progressbar li:after {
+.progressbar li:after {
     content: '';
     width: 100%;
     height: 2px;
@@ -152,14 +152,14 @@
     z-index: -1; /*put it behind the numbers*/
 }
 
-#progressbar li:first-child:after {
+.progressbar li:first-child:after {
     /*connector not needed before the first step*/
     content: none;
 }
 
 /*marking active/completed steps green*/
 /*The number of the step and the connector before it = green*/
-#progressbar li.active:before, #progressbar li.active:after {
+.progressbar li.active:before, .progressbar li.active:after {
     background: #5e3388;
     color: white;
 }
