--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -38,7 +38,7 @@
                             <h4 class="card-title" th:text="|${eventInfos.name} ouvre ses portes du ${#dates.format(eventInfos.eventBeginningDate, 'dd/MM/yyyy')} au ${#dates.format(eventInfos.eventEndingDate, 'dd/MM/yyyy')}|"></h4>
 							<p class="card-text" th:text="${eventInfos.description}"></p>
 								<p class="regMessage" th:unless="${eventInfos.registrationOpen}" th:text="${eventInfos.registrationMessage}"></p>
-								<a th:if="${eventInfos.registrationOpen}" href="#" class="btn btn-primary">S'inscrire</a>
+								<a th:if="${eventInfos.registrationOpen}" href="/subscribeEditor" th:attr="value=${eventInfos.id}" class="btn btn-primary">S'inscrire</a>
 						</div>
 					</div>
 				</div>
