--- a/src/main/resources/CSS/subscribeEditor.css
+++ b/src/main/resources/CSS/subscribeEditor.css
@@ -3,20 +3,17 @@
     margin: auto;
     padding: 0px;
 }
-.subscribeEditor li{
-    text-align: center !important;
-    font-size: 1rem !important;
-}
+
 /*form styles*/
-#msform {
+.msform {
     text-align: center;
     position: relative;
     margin-top: 30px;
 }
 
-#msform form {
+.msform form {
     background: white;
-    border: 1px solid #5e3388;
+    border: 1px solid var(--purple);
     border-radius: 5px ;
     box-shadow: 3px 3px 10px 1px rgba(0, 0, 0, 0.3);
     padding: 20px 30px;
@@ -29,28 +26,25 @@
 }
 
 /*Hide all except first fieldset*/
-#msform form:not(:first-of-type) {
+.msform form:not(:first-of-type) {
     display: none;
 }
 
 /*inputs*/
-#msform input, #msform textarea {
+.msform input, .msform textarea {
     padding: 15px;
     border: 1px solid #ccc;
     border-radius: 0px;
     margin-bottom: 10px;
     width: 100%;
     box-sizing: border-box;
-    font-family: montserrat;
-    color: #2C3E50;
-    font-size: 13px;
 }
 
-#msform input:focus, #msform textarea:focus {
+.msform input:focus, .msform textarea:focus {
     -moz-box-shadow: none !important;
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
-    border: 1px solid #ec5d31;
+    border: 1px solid var(--orange);
     outline-width: 0;
     transition: All 0.5s ease-in;
     -webkit-transition: All 0.5s ease-in;
@@ -59,9 +53,9 @@
 }
 
 /*buttons*/
-#msform .action-button {
+.msform .action-button {
     width: 100px;
-    background: #ec5d31;
+    background: var(--orange);
     font-weight: bold;
     color: white;
     border: 0 none;
@@ -71,11 +65,11 @@
     margin: 10px 5px;
 }
 
-#msform .action-button:hover, #msform .action-button:focus {
-    box-shadow: 0 0 0 2px white, 0 0 0 3px #ec5d31;
+.msform .action-button:hover, .msform .action-button:focus {
+    box-shadow: 0 0 0 2px white, 0 0 0 3px var(--orange);
 }
 
-#msform .action-button-previous {
+.msform .action-button-previous {
     width: 100px;
     background: #C5C5F1;
     font-weight: bold;
@@ -87,23 +81,22 @@
     margin: 10px 5px;
 }
 
-#msform .action-button-previous:hover, #msform .action-button-previous:focus {
+.msform .action-button-previous:hover, .msform .action-button-previous:focus {
     box-shadow: 0 0 0 2px white, 0 0 0 3px #C5C5F1;
 }
 
 /*headings*/
 .fs-title {
-    font-size: 18px;
     text-transform: uppercase;
-    color: #2C3E50;
     margin-bottom: 10px;
+    margin-top: 5px;
     letter-spacing: 2px;
-    font-weight: bold;
+    font-size: 1.7em;
 }
 
 .fs-subtitle {
     font-weight: normal;
-    font-size: 13px;
+    font-size: 15px;
     color: #666;
     margin-bottom: 20px;
 }
@@ -120,7 +113,7 @@
     list-style-type: none;
     color: black;
     text-transform: uppercase;
-    font-size: 9px;
+    font-size: 0.8em;
     float: left;
     position: relative;
     letter-spacing: 1px;
@@ -160,7 +153,7 @@
 /*marking active/completed steps green*/
 /*The number of the step and the connector before it = green*/
 .progressbar li.active:before, .progressbar li.active:after {
-    background: #5e3388;
+    background: var(--purple);
     color: white;
 }
 
@@ -173,7 +166,7 @@
 .dme_link a {
     background: #FFF;
     font-weight: bold;
-    color: #5e3388;
+    color: var(--purple);
     border: 0 none;
     border-radius: 25px;
     cursor: pointer;
