--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -25,7 +25,7 @@
             <h1 class="col-12 pl-7">Formulaire d'inscription</h1>
             <div class="row">
                 <div class="col-12 ">
-                    <div id="msform">
+                    <div id="msform" class="msform">
                         <!-- progressbar -->
                         <ul class="row progressbar d-none d-sm-block" id="progressbar_1">
                             <li class="active col-4">Informations générales</li>
@@ -41,8 +41,8 @@
                         <form method="post" action="/inscription_editeur">
                             <fieldset>
                                 <h2 class="fs-title">Informations générales</h2>
-                                <h3 class="fs-subtitle">Inscription de l'entreprise:</h3>
-                                <div class="row align-items-center text-left pt-5">
+                                <h3 class="fs-subtitle">Orléans Joue 2020</h3>
+                                <div class="row align-items-center text-left pt-3">
                                     <div class="col-sm-8">
                                         <label for="tablesQuantity">Nombre de tables souhaitées</label>
                                     </div>
@@ -58,7 +58,7 @@
                                         <input type="checkbox" id="electricalSupplyNeed" name="electricalSupplyNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
                                     </div>
                                 </div>
-                                <div class="row align-items-center text-left pt-4">
+                                <div class="row align-items-center text-left pt-4 pb-4">
                                     <div class="col-md-8">
                                         <label for="send">Option vente sur le stand</label>
                                     </div>
@@ -72,9 +72,9 @@
                         <form method="post" action="/inscription_editeur">
                             <fieldset>
                                 <h2 class="fs-title">Moyens Humains</h2>
-                                <h3 class="fs-subtitle">Your presence on the social network</h3>
-                                <div></div>
-                                <div class="row align-items-center text-left pt-4">
+                                <h3 class="fs-subtitle">Orléans Joue 2020</h3>
+                                <div class="pt-3"></div>
+                                <div class="row align-items-center text-left pt-4 pb-4">
                                     <div class="col-md-8">
                                         <p>Ajouter un référent</p>
                                     </div>
@@ -90,17 +90,17 @@
                         <form method="post" action="/inscription_editeur">
                             <fieldset>
                                 <h2 class="fs-title">Informations complémentaires</h2>
-                                <h3 class="fs-subtitle">Fill in your credentials</h3>
+                                <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <div>
-                                    <label for="comments">Ajouter un commentaire</label>
+                                    <label for="comments" class="w-100 text-left pt-3">Ajouter un commentaire</label>
                                     <textarea id="comments" class="comments" name="comments"></textarea>
                                 </div>
-                                <div>
-                                    <label for="cost">Coût de l'inscrption : 65 euros</label>
+                                <div class="pb-4">
+                                    <label for="cost" class="w-100 text-left">Coût de l'inscrption : 65 euros</label>
                                     <input type="hidden" id="cost" name="registrationCost"  value="65"/>
                                 </div>
                                 <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
-                                <button type="submit" name="registration" class="next action-button">Valider votre demande d'inscription</button>
+                                <button type="submit" name="registration" class="next action-button">Valider</button>
                             </fieldset>
                         </form>
                     </div>
@@ -116,7 +116,7 @@
  	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="../JS/subscribeEditor.js"></script>
-    <script	src="JS/main.js"></script>
+    <script	src="../JS/main.js"></script>
 
 </body>
 
