--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -11,6 +11,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+textarea {	
+	resize: none;
+}
+
 main {
     margin-top: 120px;
     min-height: calc(100vh - 86px - 201.8px - 120px);
