--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -39,7 +39,8 @@
                             <li class="col-4"></li>
                         </ul>
                         <!-- fieldsets -->
-                        <form method="post" action="/inscription_editeur">
+
+                        <form method="post" action="/subscribeEditor">
                             <fieldset class="registrationState">
                                 <h2 class="fs-title">Informations générales</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
